--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@400;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/reset.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 
 </head>
 
@@ -144,113 +144,60 @@
         </div>
     </section>
 
-    <section class="presentation">
-        <div class="presentation__items-1">
+    <section class="work">
+        <div class="work__inner">
+            <div class="work__item">
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-1-1.png" alt="">
+                    </a>
+                    <!-- <div class="work__inner-link">
+                        <a class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div> -->
 
-            <div class="presentation__item-1">
-
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+                </div>
+            </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-1-2.png" alt="">
                 </a>
             </div>
-            <div class="presentation__item-2">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-1-3.png" alt="">
                 </a>
             </div>
-
-            <div class="presentation__item-3">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-1-4.png" alt="">
                 </a>
             </div>
-            <div class="presentation__item-4">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-2-1.png" alt="">
                 </a>
             </div>
-
-        </div>
-        <div class="presentation__items-2">
-            <div class="presentation__item-2-1">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-2-2.png" alt="">
                 </a>
             </div>
-            <div class="presentation__item-2-2">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-2-3.png" alt="">
                 </a>
             </div>
-
-            <div class="presentation__item-2-3">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="presentation__item-2-4">
-                <a class="presentation__item-link" href="#">
-                    <div class="presentation__item-content">
-                        <div class="presentation__item-tile">
-                            Project Name
-                        </div>
-                        <div class="presentation__item-text">
-                            User Interface Design
-                        </div>
-                    </div>
+            <div class="work__item">
+                <a href="#">
+                    <img src="images/presentation-2-4.png" alt="">
                 </a>
             </div>
         </div>
-    
     </section>
 
 
