--- a/index.html
+++ b/index.html
@@ -146,57 +146,135 @@
 
     <section class="work">
         <div class="work__inner">
+
             <div class="work__item">
                 <div class="work__item-box">
                     <a class="" href="#">
                         <img src="images/presentation-1-1.png" alt="">
                     </a>
-                    <!-- <div class="work__inner-link">
-                        <a class="work__item-tile">
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
                             Project Name
                         </a>
-                        <a class="work__item-text">
+                        <a src="#" class="work__item-text">
                             User Interface Design
                         </a>
-                    </div> -->
-
+                    </div>
                 </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-1-2.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-1-2.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-1-3.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-1-3.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-1-4.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-1-4.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-2-1.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-2-1.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-2-2.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-2-2.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-2-3.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-2-3.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
             <div class="work__item">
-                <a href="#">
-                    <img src="images/presentation-2-4.png" alt="">
-                </a>
+                <div class="work__item-box">
+                    <a class="" href="#">
+                        <img src="images/presentation-2-4.png" alt="">
+                    </a>
+                    <div class="work__item-link">
+                        <a src="#" class="work__item-tile">
+                            Project Name
+                        </a>
+                        <a src="#" class="work__item-text">
+                            User Interface Design
+                        </a>
+                    </div>
+                </div>
             </div>
+
         </div>
     </section>
 
